--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,3 +12,4 @@ en:
   inherit_description: "Inherit parent Description"
   inherit_is_private: "Inherit parent Private"
   inherit_parent_tracker: "Inherit parent Tracker"
+  inherit: "Inherit"
