--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,4 +12,5 @@ en:
   inherit_description: "Inherit parent Description"
   inherit_is_private: "Inherit parent Private"
   inherit_parent_tracker: "Inherit parent Tracker"
+  inherit_estimated_hours: "Inherit parent Estimated Hours"
   inherit: "Inherit"
